[gd_scene load_steps=5 format=3 uid="uid://dsyk5xb3dw8e5"]

[ext_resource type="Script" path="res://typed_label.gd" id="1_7r3oq"]
[ext_resource type="FontFile" uid="uid://dgn0rkshyq5r" path="res://tinypixel.otf" id="2_gq8ao"]
[ext_resource type="AudioStream" uid="uid://b5mtlmwmd613c" path="res://sounds/beep.wav" id="3_famkc"]

[sub_resource type="LabelSettings" id="LabelSettings_g4ls0"]
font = ExtResource("2_gq8ao")
font_size = 7
font_color = Color(1, 1, 0, 1)

[node name="TypedLabel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7r3oq")

[node name="lbl" type="Label" parent="."]
layout_mode = 0
offset_right = 146.0
offset_bottom = 117.0
label_settings = SubResource("LabelSettings_g4ls0")
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 2

[node name="timer" type="Timer" parent="."]
wait_time = 0.025
autostart = true

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_famkc")
volume_db = -2.68

[node name="audio_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="audio_timer" to="." method="_on_audio_timer_timeout"]
